--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +17,7 @@
 <body class="body">
     <header class="header">
 
-      
+
         <nav class="header__nav">
 
             <div class="header__logo">
@@ -29,18 +30,18 @@
                 <li class="header__nav-item"><a class="header__nav-link" href="pages/login.html">Tienda</a></li>
             </ul>
         </nav>
-        
+
         <div class="container-fluid">
-        <div class="row">
-            <div class="col p-0 position-relative">
-            <video class="banner__video" autoplay muted loop>
-                <source src="assets/video/banner.mp4" type="video/mp4">       
-            </video>
-            <h2 class="banner__text1">Bienvenido a</h2>
-            <h1 class="banner__text2">Overclock Parts</h1>
+            <div class="row">
+                <div class="col p-0 position-relative">
+                    <video class="banner__video" autoplay muted loop>
+                        <source src="assets/video/banner.mp4" type="video/mp4">
+                    </video>
+                    <h2 class="banner__text1">Bienvenido a</h2>
+                    <h1 class="banner__text2">Overclock Parts</h1>
+                </div>
+            </div>
         </div>
-    </div>
-    </div>
 
     </header>
 
@@ -51,37 +52,50 @@
         <div class="parts">
             <div class="parts__row">
                 <img class="parts__row-img" src="assets/img/bujia.png" alt="bujia">
-                <p class="parts__row-txt">m ipsum dolor sit, amet consectetur adipisicing elit. Quod suscipit, similique laboriosam aperiam</p>
+                <p class="parts__row-txt">m ipsum dolor sit, amet consectetur adipisicing elit. Quod suscipit, similique
+                    laboriosam aperiam</p>
             </div>
             <div class="parts__row">
-                <p class="parts__row-txt">m ipsum dolor sit, amet consectetur adipisicing elit. Quod suscipit, similique laboriosam aperiam</p>
+                <p class="parts__row-txt">m ipsum dolor sit, amet consectetur adipisicing elit. Quod suscipit, similique
+                    laboriosam aperiam</p>
                 <img class="parts__row-img" src="assets/img/cilindro.png" alt="cilindro">
 
             </div>
             <div class="parts__row">
                 <img class="parts__row-img" src="assets/img/piston.png" alt="piston">
-                <p class="parts__row-txt">m ipsum dolor sit, amet consectetur adipisicing elit. Quod suscipit, similique laboriosam aperiam</p>
+                <p class="parts__row-txt">m ipsum dolor sit, amet consectetur adipisicing elit. Quod suscipit, similique
+                    laboriosam aperiam</p>
             </div>
 
         </div>
 
 
-  
-            <div class="about">
-                <div class="about__row">
-                    <h2 class="about__title">Bienvenido a Overclock Parts</h2>
-                    <p class="about__text">En Overclock Parts, nos enorgullecemos de ser tu destino confiable para todas tus necesidades de partes de moto. Desde nuestro inicio, nos hemos dedicado a proporcionar a nuestros clientes las mejores piezas de moto, diseñadas para mejorar el rendimiento y la experiencia de conducción.</p>
-                </div>
-                <div class="about__row">
-                    <h2 class="about__title">Pasión por la Excelencia</h2>
-                    <p class="about__text">Nuestra pasión por el motociclismo impulsa todo lo que hacemos. Nos esforzamos por ofrecer productos de la más alta calidad que superen las expectativas de nuestros clientes. Ya sea que seas un entusiasta de las motos de calle, un piloto de carreras o un mecánico profesional, estamos aquí para servirte.</p>
-                </div>
-                <div class="about__row">
-                    <h2 class="about__title">Compromiso con la Calidad</h2>
-                    <p class="about__text">En Overclock Parts, la calidad es nuestra prioridad número uno. Trabajamos con los mejores fabricantes y proveedores para garantizar que cada pieza que vendemos cumpla con los más altos estándares de calidad. Desde bujías hasta sistemas de escape, cada producto en nuestro inventario está cuidadosamente seleccionado para ofrecer un rendimiento excepcional y una durabilidad superior.</p>
-                </div>
 
+        <div class="about">
+            <div class="about__row">
+                <h2 class="about__title">Bienvenido a Overclock Parts</h2>
+                <p class="about__text">En Overclock Parts, nos enorgullecemos de ser tu destino confiable para todas tus
+                    necesidades de partes de moto. Desde nuestro inicio, nos hemos dedicado a proporcionar a nuestros
+                    clientes las mejores piezas de moto, diseñadas para mejorar el rendimiento y la experiencia de
+                    conducción.</p>
             </div>
+            <div class="about__row">
+                <h2 class="about__title">Pasión por la Excelencia</h2>
+                <p class="about__text">Nuestra pasión por el motociclismo impulsa todo lo que hacemos. Nos esforzamos
+                    por ofrecer productos de la más alta calidad que superen las expectativas de nuestros clientes. Ya
+                    sea que seas un entusiasta de las motos de calle, un piloto de carreras o un mecánico profesional,
+                    estamos aquí para servirte.</p>
+            </div>
+            <div class="about__row">
+                <h2 class="about__title">Compromiso con la Calidad</h2>
+                <p class="about__text">En Overclock Parts, la calidad es nuestra prioridad número uno. Trabajamos con
+                    los mejores fabricantes y proveedores para garantizar que cada pieza que vendemos cumpla con los más
+                    altos estándares de calidad. Desde bujías hasta sistemas de escape, cada producto en nuestro
+                    inventario está cuidadosamente seleccionado para ofrecer un rendimiento excepcional y una
+                    durabilidad superior.</p>
+            </div>
+
+        </div>
 
 
 
@@ -99,15 +113,19 @@
         </ul>
 
         <ul class="footer__redes-list">
-            <li class="footer__redes-item"><img class="footer__redes-img"src="assets/img/facebook.webp" alt=""><a class="footer__redes-link" href="#"></a></li>
-            <li class="footer__redes-item"><img class="footer__redes-img" src="assets/img/instagram.webp" alt=""><a class="footer__redes-link" href="#"></a></li>
-            <li class="footer__redes-item"><img class="footer__redes-img" src="assets/img/whatsapp.webp" alt=""><a class="footer__redes-link" href="#"></a></li>
+            <li class="footer__redes-item"><img class="footer__redes-img" src="assets/img/facebook.webp" alt=""><a
+                    class="footer__redes-link" href="#"></a></li>
+            <li class="footer__redes-item"><img class="footer__redes-img" src="assets/img/instagram.webp" alt=""><a
+                    class="footer__redes-link" href="#"></a></li>
+            <li class="footer__redes-item"><img class="footer__redes-img" src="assets/img/whatsapp.webp" alt=""><a
+                    class="footer__redes-link" href="#"></a></li>
         </ul>
 
     </footer>
 
- <script src="main.js"></script>   
- <script src="js/bootstrap.bundle.min.js"></script>   
+    <script src="main.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
 
 </body>
+
 </html>
