se saco el carrito

--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -48,6 +48,11 @@
 
     <main class="main">
 
+        <div class="busqueda">
+        <input type="text" class="busqueda__barra" id="busqueda" placeholder="Buscar por nombre...">
+        </div>
+
+
         <div class="productos">
 
 
