Se agregaro una funcion de registro con localstorage

--- a/pages/login.html
+++ b/pages/login.html
@@ -27,7 +27,7 @@
             <ul class="header__nav-list">
                 <li class="header__nav-item"><a class="header__nav-link" href="../index.html">Index</a></li>
                 <li class="header__nav-item"><a class="header__nav-link" href="nosotros.html">Nosotros</a></li>
-                <li class="header__nav-item"><a class="header__nav-link" href="login.html">Tienda</a></li>
+                <li class="header__nav-item"><a class="header__nav-link" id="tiendaLink" href="tienda.html">Tienda</a></li>
             </ul>
         </nav>
 
@@ -63,7 +63,7 @@
                     <div class="formulario__recordar"><a href="#">¿Olvido su contraseña?</a></div>
                     <input class="formulario__iniciar" id="iniciar" type="button" value="Iniciar">
                     <div class="formulario__clienteNuevo">
-                        <a class="formulario__registro" href="#">Registrarme</a>
+                        <a class="formulario__registro" href="register.html">Registrarme</a>
                     </div>
 
 
@@ -99,6 +99,7 @@
     <script src="../main.js"></script>
     <script src="../js/login.js"></script>
     <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="../js/sesion.js"></script>
 
 </body>
 
