--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -27,7 +27,7 @@
             <ul class="header__nav-list">
                 <li class="header__nav-item"><a class="header__nav-link" href="../index.html">Index</a></li>
                 <li class="header__nav-item"><a class="header__nav-link" href="nosotros.html">Nosotros</a></li>
-                <li class="header__nav-item"><a class="header__nav-link" href="login.html">Tienda</a></li>
+                <li class="header__nav-item"><a class="header__nav-link" id="tiendaLink" href="tienda.html">Tienda</a></li>
             </ul>
         </nav>
 
@@ -80,6 +80,7 @@
 
     <script src="../main.js"></script>
     <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="../js/sesion.js"></script>
 
 </body>
 
