--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <ul class="header__nav-list">
                 <li class="header__nav-item"><a class="header__nav-link" href="index.html">Index</a></li>
                 <li class="header__nav-item"><a class="header__nav-link" href="pages/nosotros.html">Nosotros</a></li>
-                <li class="header__nav-item"><a class="header__nav-link" href="pages/login.html">Tienda</a></li>
+                <li class="header__nav-item"><a class="header__nav-link" id="tiendaLink" href="pages/tienda.html">Tienda</a></li>
             </ul>
         </nav>
 
@@ -125,6 +125,8 @@
 
     <script src="main.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/sesion.js"></script>
+
 
 </body>
 
