se agrego panelAdmin, registerLocalStorage y fixes

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <li class="header__nav-item"><a class="header__nav-link" href="index.html">Index</a></li>
                 <li class="header__nav-item"><a class="header__nav-link" href="pages/nosotros.html">Nosotros</a></li>
                 <li class="header__nav-item"><a class="header__nav-link" id="tiendaLink" href="pages/tienda.html">Tienda</a></li>
+                <li class="header__nav-item"><a class="header__nav-link" id="panelAdmin" href="pages/panel.html">Panel</a></li>
             </ul>
         </nav>
 
@@ -124,8 +125,9 @@
     </footer>
 
     <script src="main.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="js/sesion.js"></script>
+    <script src="/js/login.js"></script>
 
 
 </body>
