--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -28,6 +28,7 @@
                 <li class="header__nav-item"><a class="header__nav-link" href="../index.html">Index</a></li>
                 <li class="header__nav-item"><a class="header__nav-link" href="nosotros.html">Nosotros</a></li>
                 <li class="header__nav-item"><a class="header__nav-link" href="tienda.html" id="tiendaLink">Tienda</a></li>
+                <li class="header__nav-item"><a class="header__nav-link" id="panelAdmin" href="#">Panel</a></li>
             </ul>
         </nav>
 
@@ -60,7 +61,6 @@
         </div>
 
 
-
         <div class="productos__total">
             <div class="productos__precioTotal">
 
@@ -90,6 +90,7 @@
             <li class="footer__nav-item"><a class="footer__nav-link" href="../index.html">Index</a></li>
             <li class="footer__nav-item"><a class="footer__nav-link" href="nosotros.html">Nosotros</a></li>
             <li class="footer__nav-item"><a class="footer__nav-link" id="tiendaLink" href="tienda.html">Tienda</a></li>
+            <li class="header__nav-item"><a class="header__nav-link" id="panelAdmin" href="panel.html">Panel</a></li>
         </ul>
 
         <ul class="footer__redes-list">
@@ -105,8 +106,9 @@
 
     <script src="../main.js"></script>
     <script src="../js/store.js"></script>
-    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="../js/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="../js/sesion.js"></script>
+    <script src="../js/login.js"></script>
 
 </body>
 
