--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -28,6 +28,7 @@
                 <li class="header__nav-item"><a class="header__nav-link" href="../index.html">Index</a></li>
                 <li class="header__nav-item"><a class="header__nav-link" href="nosotros.html">Nosotros</a></li>
                 <li class="header__nav-item"><a class="header__nav-link" id="tiendaLink" href="tienda.html">Tienda</a></li>
+                <li class="header__nav-item"><a class="header__nav-link" id="panelAdmin" href="#">Panel</a></li>
             </ul>
         </nav>
 
@@ -65,6 +66,7 @@
             <li class="footer__nav-item"><a class="footer__nav-link" href="../index.html">Index</a></li>
             <li class="footer__nav-item"><a class="footer__nav-link" href="nosotros.html">Nosotros</a></li>
             <li class="footer__nav-item"><a class="footer__nav-link" href="login.html">Tienda</a></li>
+            <li class="header__nav-item"><a class="header__nav-link" id="panelAdmin" href="panel.html">Panel</a></li>
         </ul>
 
         <ul class="footer__redes-list">
@@ -79,8 +81,9 @@
     </footer>
 
     <script src="../main.js"></script>
-    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="../js/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="../js/sesion.js"></script>
+    <script src="../js/login.js"></script>
 
 </body>
 
