--- a/pages/panel.html
+++ b/pages/panel.html
@@ -28,6 +28,7 @@
                 <li class="header__nav-item"><a class="header__nav-link" href="../index.html">Index</a></li>
                 <li class="header__nav-item"><a class="header__nav-link" href="nosotros.html">Nosotros</a></li>
                 <li class="header__nav-item"><a class="header__nav-link" id="tiendaLink" href="tienda.html">Tienda</a></li>
+                <li class="header__nav-item"><a class="header__nav-link" id="panelAdmin" href="panel.html">Panel</a></li>
             </ul>
         </nav>
 
@@ -47,33 +48,14 @@
 
 
     <main class="main">
-
-        <div class="contenedorFormulario">
-            <div class="formulario">
-                <h1 class="formulario__titulo">Registro</h1>
-                <form class="formulario__form" method="post">
-                    <div class="formulario__username">
-                        <input class="formulario__input-register" id="user_register" type="text" required placeholder="Usuario">
-                    </div>
-                    <div class="formulario__email">
-                        <input class="formulario__input-register" id="email_register" type="email" required placeholder="Email">
-                    </div>
-                    <div class="formulario__password">
-                        <input class="formulario__input-register" id="pass_register" type="password" required placeholder="Contraseña">
-                    </div>
-
-                    <div class="contenedorRegistro">
-                        <input class="formulario__registro" id="cancelar" type="button" href="login.html" value="Cancelar">
-                        <input class="formulario__registro" id="registro" type="button" value="Registro">
-                    </div>
-
-
-
-                </form>
-            </div>
-        </div>
-
-
+<div class="contenedorUsuarios">
+<div id="usuarios" class="contenedorUsuarios__usuarios">
+    <H1 class="contenedorUsuarios__texto">USUARIOS</H1>
+</div>
+<div id="admins" class="contenedorUsuarios__usuarios">
+    <H1 class="contenedorUsuarios__texto">ADMINS</H1>
+</div>
+</div>
 
     </main>
 
@@ -85,7 +67,6 @@
             <li class="footer__nav-item"><a class="footer__nav-link" href="../index.html">Index</a></li>
             <li class="footer__nav-item"><a class="footer__nav-link" href="nosotros.html">Nosotros</a></li>
             <li class="footer__nav-item"><a class="footer__nav-link" href="login.html">Tienda</a></li>
-            <li class="header__nav-item"><a class="header__nav-link" id="panelAdmin" href="panel.html">Panel</a></li>
         </ul>
 
         <ul class="footer__redes-list">
@@ -100,10 +81,10 @@
     </footer>
 
     <script src="../main.js"></script>
-    <script src="../js/register.js"></script>
-    <script src="../js/login.js"></script>
     <script src="../js/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="../js/sesion.js"></script>
+    <script src="../js/login.js"></script>
+    <script src="../js/panel.js"></script>
 
 </body>
 
