se modifico el href del panel

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -28,7 +28,7 @@
                 <li class="header__nav-item"><a class="header__nav-link" href="../index.html">Index</a></li>
                 <li class="header__nav-item"><a class="header__nav-link" href="nosotros.html">Nosotros</a></li>
                 <li class="header__nav-item"><a class="header__nav-link" id="tiendaLink" href="tienda.html">Tienda</a></li>
-                <li class="header__nav-item"><a class="header__nav-link" id="panelAdmin" href="#">Panel</a></li>
+                <li class="header__nav-item"><a class="header__nav-link" id="panelAdmin" href="panel.html">Panel</a></li>
             </ul>
         </nav>
 
