fixes de responsive, se agrego diseño de carrito y panel admin

--- a/pages/panel.html
+++ b/pages/panel.html
@@ -48,6 +48,13 @@
 
 
     <main class="main">
+
+<div class="contenedorTitulos">
+    <H2 class="contenedorUsuarios__texto">USUARIOS</H2>
+    <H2 class="contenedorUsuarios__texto">ADMINS</H2>
+</div>
+
+
 <div class="contenedorUsuarios">
 <div id="usuarios" class="contenedorUsuarios__usuarios">
     <H1 class="contenedorUsuarios__texto">USUARIOS</H1>
